🐛 Pan / Fix text within button not vertically align middle problem

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -8,7 +8,6 @@
   white-space: nowrap;
   cursor: pointer;
   color: rgb(255, 255, 255);
-  line-height: 24px;
   border-radius: 160px;
   border-color: rgba(0, 0, 0, 0);
   border-style: solid;
@@ -71,9 +70,9 @@
   }
 
   &.small{
-    padding: 5px 10px;
-    height: 27px;
-    font-size: 11px;
+    padding: 4px 8px;
+    height: 12px;
+    font-size: 12px;
     font-weight: 600;
     letter-spacing: .44px;
     border-width: 1px;
@@ -94,12 +93,12 @@
   }
 
   &.navbar{
-    height: 35px;
+    height: 34px;
     width: 135px;
     border-radius: 20px;
     font-size: 14px;
     font-weight: 600;
-    line-height: 18px;
+    line-height: 34px;
   }
   
   &.long{
@@ -174,9 +173,9 @@
   }
 
   &.navMobile {
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 400;
-    line-height: 13px;
+    line-height: 14px;
     font-family: "Baloo Tamma 2", cursive;
     color: #313849;
 
